Post-Processing Notebook

--- a/Test_Notebook.ipynb
+++ b/Test_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\ema2ambisonics\\src\\get_soundfield_coeffs_from_ema.py:66: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  s_ambisonics[n**2 + n + m, :] = \\\n"
+     ]
+    }
+   ],
    "source": [
-    "sig = pf.io.read_audio(r'Recording_Reverberant/ema_16.wav')\n",
+    "sig = pf.io.read_audio(r'Impulse Responses/EMA_RAR/ir_ema_rar.wav')\n",
     "filter_length = 2048\n",
     "f = np.linspace(0, 48e3/2, filter_length//2+1)\n",
     "alpha = np.linspace(0, 2*np.pi, 16, endpoint=False)\n",
@@ -128,12 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save ambisonics signal\n",
-    "pf.io.write_audio(s_sh, r'Recording_Reverberant/xxx.wav')"
+    "pf.io.write_audio(s_sh, r'Impulse Responses/EMA_RAR/ir_ambisonics_ema_rar.wav')"
    ]
   },
   {
